--- a/index.html
+++ b/index.html
@@ -130,6 +130,29 @@
             display: none;
         }
 
+        .keyboard-info {
+            width: 95%;
+            max-width: 1200px;
+            margin-top: 15px;
+            text-align: left;
+            font-size: 0.9em; /* Small font */
+            color: #333;
+            background-color: #fffacd; /* Yellow background */
+            padding: 10px;
+            border-radius: 5px;
+            border: 1px solid #e0c240;
+            line-height: 1.4;
+        }
+        .keyboard-info strong {
+            font-weight: bold;
+        }
+        .keyboard-info span {
+            display: inline-block;
+            margin-right: 15px;
+            white-space: nowrap; /* Keep items on one line if space allows */
+        }
+
+
         @media (max-width: 768px) {
             body {
                 padding: 10px;
@@ -173,6 +196,15 @@
             .key-space {
                 flex-grow: 3;
             }
+
+            .keyboard-info {
+                font-size: 0.85em; /* Smaller font on small screens */
+                padding: 8px;
+                width: 100%;
+            }
+            .keyboard-info span {
+                margin-right: 10px;
+            }
         }
 
         @media (max-width: 480px) {
@@ -187,6 +219,14 @@
             textarea {
                 min-height: 120px;
                 font-size: 1.2em;
+            }
+            .keyboard-info {
+                font-size: 0.8em; /* Even smaller font on very small screens */
+                padding: 6px;
+            }
+            .keyboard-info span {
+                display: block; /* Stack items on very small screens */
+                margin-right: 0;
             }
         }
     </style>
@@ -212,7 +252,43 @@
         </div>
 
         <textarea id="output" rows="8" placeholder="Type Amharic here..."></textarea>
-        </div>
+    </div>
+
+    <div class="keyboard-info"> Using physical keyboard:
+le = ለ
+lu= ሉ
+li = ሊ
+la = ላ
+ly = ሌ
+l = ል
+lo = ሎ
+lwa = ሏ
+   ; = ሸ
+, = ፣  |  shift + , = ጸ  
+. = ።  | shift + . = ፀ        
+h = ሀ | Shift + h = ሐ
+s = ሰ | Shift + s = ሠ
+t = ተ | Shift + t = ጠ
+c = ቸ | Shift + c = ጨ
+v = ቨ | Shift + v = ኀ
+n = ነ | Shift + n = ኘ
+k = ከ | Shift + k = ኸ
+z = ዘ | Shift + z = ዠ
+p = ፐ | Shift + p = ጰ
+l = ለ
+m = መ
+r = ረ
+X = ሸ
+q = ቀ
+b = በ
+w = ወ
+y = የ
+d = ደ
+j = ጀ
+g = ገ
+~ = ጸ
+f = ፈ
+    </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
@@ -225,32 +301,46 @@
             const specialKeysContainer = document.getElementById('special-keys');
 
             const fidelGroups = {
-                'ሀ': ['ሀ', 'ሁ', 'ሂ', 'ሃ', 'ሄ', 'ህ', 'ሆ', 'ኋ'], 'ለ': ['ለ', 'ሉ', 'ሊ', 'ላ', 'ሌ', 'ል', 'ሎ', 'ሏ'],
-                'ሐ': ['ሐ', 'ሑ', 'ሒ', 'ሓ', 'ሔ', 'ሕ', 'ሖ', 'ሗ'], 'መ': ['መ', 'ሙ', 'ሚ', 'ማ', 'ሜ', 'ም', 'ሞ', 'ሟ'],
-                'ሠ': ['ሠ', 'ሡ', 'ሢ', 'ሣ', 'ሤ', 'ሥ', 'ሦ', 'ሧ'], 'ረ': ['ረ', 'ሩ', 'ሪ', 'ራ', 'ሬ', 'ር', 'ሮ', 'ሯ'],
-                'ሰ': ['ሰ', 'ሱ', 'ሲ', 'ሳ', 'ሴ', 'ስ', 'ሶ', 'ሷ'], 'ሸ': ['ሸ', 'ሹ', 'ሺ', 'ሻ', 'ሼ', 'ሽ', 'ሾ', 'ሿ'],
+                'ሀ': ['ሀ', 'ሁ', 'ሂ', 'ሃ', 'ሄ', 'ህ', 'ሆ', 'ኋ'], 
+                'ለ': ['ለ', 'ሉ', 'ሊ', 'ላ', 'ሌ', 'ል', 'ሎ', 'ሏ'],
+                'ሐ': ['ሐ', 'ሑ', 'ሒ', 'ሓ', 'ሔ', 'ሕ', 'ሖ', 'ሗ'], 
+                'መ': ['መ', 'ሙ', 'ሚ', 'ማ', 'ሜ', 'ም', 'ሞ', 'ሟ'],
+                'ሠ': ['ሠ', 'ሡ', 'ሢ', 'ሣ', 'ሤ', 'ሥ', 'ሦ', 'ሧ'], 
+                'ረ': ['ረ', 'ሩ', 'ሪ', 'ራ', 'ሬ', 'ር', 'ሮ', 'ሯ'],
+                'ሰ': ['ሰ', 'ሱ', 'ሲ', 'ሳ', 'ሴ', 'ስ', 'ሶ', 'ሷ'], 
+                'ሸ': ['ሸ', 'ሹ', 'ሺ', 'ሻ', 'ሼ', 'ሽ', 'ሾ', 'ሿ'],
                 'ቀ': ['ቀ', 'ቁ', 'ቂ', 'ቃ', 'ቄ', 'ቅ', 'ቆ', 'ቋ'],
-                'በ': ['በ', 'ቡ', 'ቢ', 'ባ', 'ቤ', 'ብ', 'ቦ', 'ቧ'], 'ተ': ['ተ', 'ቱ', 'ቲ', 'ታ', 'ቴ', 'ት', 'ቶ', 'ቷ'],
-                'ቸ': ['ቸ', 'ቹ', 'ቺ', 'ቻ', 'ቼ', 'ች', 'ቾ', 'ቿ'], 'ኀ': ['ኀ', 'ኁ', 'ኂ', 'ኃ', 'ኄ', 'ኅ', 'ኆ', 'ኋ'],
-                'ነ': ['ነ', 'ኑ', 'ኒ', 'ና', 'ኔ', 'ን', 'ኖ', 'ኗ'], 'ኘ': ['ኘ', 'ኙ', 'ኚ', 'ኛ', 'ኜ', 'ኝ', 'ኞ', 'ኟ'],
-                'አ': ['አ', 'ኡ', 'ኢ', 'ኣ', 'ኤ', 'እ', 'ኦ'], 'ከ': ['ከ', 'ኩ', 'ኪ', 'ካ', 'ኬ', 'ክ', 'ኮ', 'ኳ'],
+                'በ': ['በ', 'ቡ', 'ቢ', 'ባ', 'ቤ', 'ብ', 'ቦ', 'ቧ'], 
+                'ተ': ['ተ', 'ቱ', 'ቲ', 'ታ', 'ቴ', 'ት', 'ቶ', 'ቷ'],
+                'ቸ': ['ቸ', 'ቹ', 'ቺ', 'ቻ', 'ቼ', 'ች', 'ቾ', 'ቿ'], 
+                'ኀ': ['ኀ', 'ኁ', 'ኂ', 'ኃ', 'ኄ', 'ኅ', 'ኆ', 'ኋ'],
+                'ነ':  ['ነ', 'ኑ', 'ኒ', 'ና', 'ኔ', 'ን', 'ኖ', 'ኗ'], 
+                'ኘ': ['ኘ', 'ኙ', 'ኚ', 'ኛ', 'ኜ', 'ኝ', 'ኞ', 'ኟ'],
+                'አ': ['አ', 'ኡ', 'ኢ', 'ኣ', 'ኤ', 'እ', 'ኦ'], 
+                'ከ': ['ከ', 'ኩ', 'ኪ', 'ካ', 'ኬ', 'ክ', 'ኮ', 'ኳ'],
                 'ኸ': ['ኸ', 'ኹ', 'ኺ', 'ኻ', 'ኼ', 'ኽ', 'ኾ','ዃ'],
-                'ወ': ['ወ', 'ዉ', 'ዊ', 'ዋ', 'ዌ', 'ው', 'ዎ'], 'ዐ': ['ዐ', 'ዑ', 'ዒ', 'ዓ', 'ዔ', 'ዕ', 'ዖ'],
-                'ዘ': ['ዘ', 'ዙ', 'ዚ', 'ዛ', 'ዜ', 'ዝ', 'ዞ', 'ዟ'], 'ዠ': ['ዠ', 'ዡ', 'ዢ', 'ዣ', 'ዤ', 'ዥ', 'ዦ', 'ዧ'],
+                'ወ': ['ወ', 'ዉ', 'ዊ', 'ዋ', 'ዌ', 'ው', 'ዎ'],
+                'ዐ': ['ዐ', 'ዑ', 'ዒ', 'ዓ', 'ዔ', 'ዕ', 'ዖ'],
+                'ዘ': ['ዘ', 'ዙ', 'ዚ', 'ዛ', 'ዜ', 'ዝ', 'ዞ', 'ዟ'], 
+                'ዠ': ['ዠ', 'ዡ', 'ዢ', 'ዣ', 'ዤ', 'ዥ', 'ዦ', 'ዧ'],
                 'የ': ['የ', 'ዩ', 'ዪ', 'ያ', 'ዬ', 'ይ', 'ዮ'],
-                'ደ': ['ደ', 'ዱ', 'ዲ', 'ዳ', 'ዴ', 'ድ', 'ዶ', 'ዷ'], 'ጀ': ['ጀ', 'ጁ', 'ጂ', 'ጃ', 'ጄ', 'ጅ', 'ጆ', 'ጇ'],
+                'ደ': ['ደ', 'ዱ', 'ዲ', 'ዳ', 'ዴ', 'ድ', 'ዶ', 'ዷ'], 
+                'ጀ': ['ጀ', 'ጁ', 'ጂ', 'ጃ', 'ጄ', 'ጅ', 'ጆ', 'ጇ'],
                 'ገ': ['ገ', 'ጉ', 'ጊ', 'ጋ', 'ጌ', 'ግ', 'ጎ', 'ጓ'],
-                'ጠ': ['ጠ', 'ጡ', 'ጢ', 'ጣ', 'ጤ', 'ጥ', 'ጦ', 'ጧ'], 'ጨ': ['ጨ', 'ጩ', 'ጪ', 'ጫ', 'ጬ', 'ጭ', 'ጮ', 'ጯ'],
-                'ጰ': ['ጰ', 'ጱ', 'ጲ', 'ጳ', 'ጴ', 'ጵ', 'ጶ', 'ጷ'], 'ጸ': ['ጸ', 'ጹ', 'ጺ', 'ጻ', 'ጼ', 'ጽ', 'ጾ', 'ጿ'],
-                'ፀ': ['ፀ', 'ፁ', 'ፂ', 'ፃ', 'ፄ', 'ፅ', 'ፆ', 'ፇ'], 'ፈ': ['ፈ', 'ፉ', 'ፊ', 'ፋ', 'ፌ', 'ፍ', 'ፎ', 'ፏ'],
+                'ጠ': ['ጠ', 'ጡ', 'ጢ', 'ጣ', 'ጤ', 'ጥ', 'ጦ', 'ጧ'],
+                'ጨ': ['ጨ', 'ጩ', 'ጪ', 'ጫ', 'ጬ', 'ጭ', 'ጮ', 'ጯ'],
+                'ጰ': ['ጰ', 'ጱ', 'ጲ', 'ጳ', 'ጴ', 'ጵ', 'ጶ', 'ጷ'], 
+                'ጸ': ['ጸ', 'ጹ', 'ጺ', 'ጻ', 'ጼ', 'ጽ', 'ጾ', 'ጿ'],
+                'ፀ': ['ፀ', 'ፁ', 'ፂ', 'ፃ', 'ፄ', 'ፅ', 'ፆ', 'ፇ'], 
+                'ፈ': ['ፈ', 'ፉ', 'ፊ', 'ፋ', 'ፌ', 'ፍ', 'ፎ', 'ፏ'],
                 'ፐ': ['ፐ', 'ፑ', 'ፒ', 'ፓ', 'ፔ', 'ፕ', 'ፖ', 'ፗ']
             };
 
-            const punctuationVirtual = ['፡', '።', '፣', '፤', '፥', '፦', '፧', '፨', '(', ')', '!', '?'];
+            const punctuationVirtual = ['፡',";", '።', '፣', '፤', '፥', '፦', '፧'', '(', ')', '!', '?'];
             const numbersVirtual = ['1', '2', '3', '4', '5', '6', '7', '8', '9', '0'];
             const specialKeysVirtual = ['Backspace', 'Space', 'Enter'];
             const symbolsAndEmojis = [
-                '@', '#', '$', '%', '&', '*', '-', '+', '=', '/', '\\', '|', '<', '>',
+                '@', '#', '$', '%', '&', '*', '-', '+', '=', '/', '\\', '|', '<', '>', 
                 '😀', '😂', '👍', '🙏', '❤️'
             ];
 
@@ -265,16 +355,11 @@
 
             const baseKeyTriggers = {
                 'h': 'ሀ', 'l': 'ለ', 'H': 'ሐ', 'm': 'መ', 'S': 'ሠ', 'r': 'ረ', 's': 'ሰ',
-                'X': 'ሸ',
-                'q': 'ቀ', 'b': 'በ', 'v': 'ቨ', 't': 'ተ', 'c': 'ቸ',
-                'V': 'ኀ',
-                'n': 'ነ', 'N': 'ኘ',
-                'x': 'አ',
-                'k': 'ከ', 'K': 'ኸ', 'w': 'ወ', '`': 'ዐ', 'z': 'ዘ', 'Z': 'ዠ',
-                'Y': 'የ',
-                'd': 'ደ', 'j': 'ጀ', 'g': 'ገ', 'T': 'ጠ', 'C': 'ጨ', 'P': 'ጰ',
-                '~': 'ጸ',
-                'f': 'ፈ', 'p': 'ፐ'
+                ':': 'ሸ', 'q': 'ቀ', 'b': 'በ', 'v': 'ቨ', 't': 'ተ', 'c': 'ቸ',
+                'V': 'ኀ', 'n': 'ነ', 'N': 'ኘ', 'x': 'አ', 'k': 'ከ', 'K': 'ኸ', 
+                'w': 'ወ', 'X': 'ዐ', 'z': 'ዘ', 'Z': 'ዠ',
+                'Y': 'የ', 'd': 'ደ', 'j': 'ጀ', 'g': 'ገ', 'T': 'ጠ', 'C': 'ጨ', 'P': 'ጰ',
+                '<': 'ጸ', '>': 'ፀ', 'f': 'ፈ', 'p': 'ፐ'      
             };
 
             for (const keyTrigger in baseKeyTriggers) {
@@ -300,7 +385,7 @@
                 baseConsonantToSixthForm[keyTrigger] = variations[5];
             }
 
-            const directMappings = {
+            const directMappings = {'/': '/', '?': '?',   
                 '.': '።', ',': '፣', ';': '፤', ':': '፡', '?': '፧',
                 '!': '፩', '@': '፪', '#': '፫', '$': '፬', '%': '፭',
                 '^': '፮', '&': '፯', '*': '፰', '(': '፱', ')': '፲',
