--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <textarea id="output" rows="8" placeholder="Type Amharic here..."></textarea>
         </div>
 
- <div class="keyboard-info"> Using physical keyboard:
+ <d<div class="keyboard-info"> Using physical keyboard:
 le = ለ
 lu= ሉ
 li = ሊ
