--- a/index.html
+++ b/index.html
@@ -213,8 +213,7 @@
 
         <textarea id="output" rows="8" placeholder="Type Amharic here..."></textarea>
         </div>
-
- <d<div class="keyboard-info"> Using physical keyboard:
+  <div class="keyboard-info"> Using physical keyboard:
 le = ለ
 lu= ሉ
 li = ሊ
