--- a/index.html
+++ b/index.html
@@ -255,23 +255,8 @@
     </div>
 
     <div class="keyboard-info">
-        Type with your physical keyboard, using a phonetic approach:
-        <span>**le** = ለ</span>
-        <span>**lu** = ሉ</span>
-        <span>**li** = ሊ</span>
-        <span>**la** = ላ</span>
-        <span>**ly** = ሌ</span>
-        <span>**l** = ል</span> (If you pause after a consonant, you'll get the 6th form)
-        <span>**lo** = ሎ</span>
-        <span>**lwa** = ሏ</span>
-        <br>
-        <span>**Shift+x** = ሸ</span>
-        <span>**Shift+v** = ኀ</span>
-        <span>**Shift+y** = የ</span>
-        <span>**Shift+~** = ጸ</span>
-        <span>**Shift+1** = ፩</span>
-        <span>**.** = ።</span>
-        <span>**,** = ፣</span>
+     Using physical keyboard: le = ለ lu= ሉ li = ሊ la = ላ ly = ሌ l = ል lo = ሎ lwa = ሏ 
+        ; = ሸ , = ፣ | shift + , = ጸ . = ። | shift + . = ፀ h = ሀ | Shift + h = ሐ s = ሰ | Shift + s = ሠ t = ተ | Shift + t = ጠ c = ቸ | Shift + c = ጨ v = ቨ | Shift + v = ኀ n = ነ | Shift + n = ኘ k = ከ | Shift + k = ኸ z = ዘ | Shift + z = ዠ p = ፐ | Shift + p = ጰ l = ለ m = መ r = ረ X = ሸ q = ቀ b = በ w = ወ y = የ d = ደ j = ጀ g = ገ ~ = ጸ f = ፈ
     </div>
 
     <script>
