--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                 'ፐ': ['ፐ', 'ፑ', 'ፒ', 'ፓ', 'ፔ', 'ፕ', 'ፖ', 'ፗ']
             };
 
-            const punctuationVirtual = ['፡', '።', '፣', '፤', '፥', '፦', '፧', '፨', '(', ')', '!', '?'];
+            const punctuationVirtual = ['፡', '።', '፣', '፤', '፥', '፦', '?', '(', ')', '!', '?'];
             const numbersVirtual = ['1', '2', '3', '4', '5', '6', '7', '8', '9', '0'];
             const specialKeysVirtual = ['Backspace', 'Space', 'Enter'];
             const symbolsAndEmojis = [
@@ -310,15 +310,15 @@
 
             const baseKeyTriggers = {
                 'h': 'ሀ', 'l': 'ለ', 'H': 'ሐ', 'm': 'መ', 'S': 'ሠ', 'r': 'ረ', 's': 'ሰ',
-                'X': 'ሸ',
+                '`': 'ሸ',
                 'q': 'ቀ', 'b': 'በ', 'v': 'ቨ', 't': 'ተ', 'c': 'ቸ',
                 'V': 'ኀ',
                 'n': 'ነ', 'N': 'ኘ',
                 'x': 'አ',
-                'k': 'ከ', 'K': 'ኸ', 'w': 'ወ', '`': 'ዐ', 'z': 'ዘ', 'Z': 'ዠ',
+                'k': 'ከ', 'K': 'ኸ', 'w': 'ወ', 'X': 'ዐ', 'z': 'ዘ', 'Z': 'ዠ',
                 'Y': 'የ',
                 'd': 'ደ', 'j': 'ጀ', 'g': 'ገ', 'T': 'ጠ', 'C': 'ጨ', 'P': 'ጰ',
-                '~': 'ጸ',
+                '<': 'ጸ', '>': 'ፀ',  
                 'f': 'ፈ', 'p': 'ፐ'
             };
 
