--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
     <div class="keyboard-info">
      Using physical keyboard: le = ለ lu= ሉ li = ሊ la = ላ ly = ሌ l = ል lo = ሎ lwa = ሏ 
-        ; = ሸ , = ፣ | shift + , = ጸ . = ። | shift + . = ፀ h = ሀ | Shift + h = ሐ s = ሰ | Shift + s = ሠ t = ተ | Shift + t = ጠ c = ቸ | Shift + c = ጨ v = ቨ | Shift + v = ኀ n = ነ | Shift + n = ኘ k = ከ | Shift + k = ኸ z = ዘ | Shift + z = ዠ p = ፐ | Shift + p = ጰ l = ለ m = መ r = ረ X = ሸ q = ቀ b = በ w = ወ y = የ d = ደ j = ጀ g = ገ ~ = ጸ f = ፈ
+        ` = ሸ , = ፣ | shift + , = ጸ . = ። | shift + . = ፀ h = ሀ | Shift + h = ሐ s = ሰ | Shift + s = ሠ t = ተ | Shift + t = ጠ c = ቸ | Shift + c = ጨ v = ቨ | Shift + v = ኀ n = ነ | Shift + n = ኘ k = ከ | Shift + k = ኸ z = ዘ | Shift + z = ዠ p = ፐ | Shift + p = ጰ l = ለ m = መ r = ረ X = ሸ q = ቀ b = በ w = ወ y = የ d = ደ j = ጀ g = ገ ~ = ጸ f = ፈ
     </div>
 
     <script>
@@ -346,9 +346,7 @@
             }
 
             const directMappings = {
-                '.': '።', ',': '፣', ';': '፤', ':': '፡', '?': '፧',
-                '!': '፩', '@': '፪', '#': '፫', '$': '፬', '%': '፭',
-                '^': '፮', '&': '፯', '*': '፰', '(': '፱', ')': '፲',
+                '.': '።', ',': '፣', ';': '፤', ':': '፡', '?': '?'
             };
             for (const key in directMappings) {
                 sequenceMapping[key] = directMappings[key];
