--- a/index.html
+++ b/index.html
@@ -290,14 +290,9 @@
                 'ፀ': ['ፀ', 'ፁ', 'ፂ', 'ፃ', 'ፄ', 'ፅ', 'ፆ', 'ፇ'], 'ፈ': ['ፈ', 'ፉ', 'ፊ', 'ፋ', 'ፌ', 'ፍ', 'ፎ', 'ፏ'],
                 'ፐ': ['ፐ', 'ፑ', 'ፒ', 'ፓ', 'ፔ', 'ፕ', 'ፖ', 'ፗ']
             };
-
             const punctuationVirtual = ['፡', '።', '፣', '፤', '፥', '፦', '?', '(', ')', '!', '?'];
-            const numbersVirtual = ['1', '2', '3', '4', '5', '6', '7', '8', '9', '0'];
             const specialKeysVirtual = ['Backspace', 'Space', 'Enter'];
-            const symbolsAndEmojis = [
-                '@', '#', '$', '%', '&', '*', '-', '+', '=', '/', '\\', '|', '<', '>',
-                '😀', '😂', '👍', '🙏', '❤️'
-            ];
+            const symbolsAndEmojis = [ '<', '>' ];
 
             let keySequence = '';
             let sequenceTimer = null;
