--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Online Amharic Keyboard (የአማርኛ ኪቦርድ) - Type Amharic Easily</title>
+    <title>Online Amharic Keyboard for PC የአማርኛ ኪቦርድ) - Type Amharic Easily</title>
+    <p> be በ, bu ቡ, bi ቢ, ba ባ, by ቤ, b ብ, bo ቦ, bwa ቧ</p>
     <meta name="description" content="A free and easy-to-use online Amharic keyboard (Fidel keyboard) to type Amharic letters and characters directly in your browser. Supports physical keyboard input.">
     <meta name="keywords" content="Amharic keyboard, online Amharic keyboard, Fidel keyboard, type Amharic, አማርኛ ኪቦርድ, Ethiopian keyboard, Geez keyboard, free Amharic typing">
     <meta name="author" content="Ahmedhaji Sadik Umer">
