--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Online Amharic Keyboard for PC የአማርኛ ኪቦርድ) - Type Amharic Easily</title>
-    <p> be በ, bu ቡ, bi ቢ, ba ባ, by ቤ, b ብ, bo ቦ, bwa ቧ</p>
+
     <meta name="description" content="A free and easy-to-use online Amharic keyboard (Fidel keyboard) to type Amharic letters and characters directly in your browser. Supports physical keyboard input.">
     <meta name="keywords" content="Amharic keyboard, online Amharic keyboard, Fidel keyboard, type Amharic, አማርኛ ኪቦርድ, Ethiopian keyboard, Geez keyboard, free Amharic typing">
     <meta name="author" content="Ahmedhaji Sadik Umer">
@@ -247,12 +247,12 @@
         <textarea id="output" rows="8" placeholder="Type Amharic here..."></textarea>
 
     </div>
-<div class="keyboard-info">
-     Using physical keyboard: le = ለ lu= ሉ li = ሊ la = ላ ly = ሌ l = ል lo = ሎ lwa = ሏ 
+<div class="keyboard-info">  
+     Using physical keyboard: be = በ bu= ቡ bi = ቢ ba = ባ by = ቤ b = ብ lo = ቦ bwa = ቧ
      ` = ሸ , = ፣ | shift + , = ጸ . = ። | shift + . = ፀ h = ሀ | Shift + h = ሐ s = ሰ |
     Shift + s = ሠ t = ተ | Shift + t = ጠ c = ቸ | Shift + c = ጨ v = ቨ | Shift + v = ኀ n = ነ |
-    Shift + n = ኘ k = ከ | Shift + k = ኸ z = ዘ | Shift + z = ዠ p = ፐ |
-    Shift + p = ጰ l = ለ m = መ r = ረ X = ሸ q = ቀ b = በ w = ወ y = የ d = ደ j = ጀ g = ገ, f = ፈ
+    Shift + n = ኘ k = ከ | Shift + k = ኸ z = ዘ | Shift + z = ዠ p = ፐ | Shift + p = ጰ
+    l = ለ m = መ r = ረ X = ሸ q = ቀ b = በ w = ወ y = የ d = ደ j = ጀ g = ገ, f = ፈ
  </div>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
