--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
      Using physical keyboard: be = በ bu= ቡ bi = ቢ ba = ባ by = ቤ b = ብ lo = ቦ bwa = ቧ
      ` = ሸ , = ፣ | shift + , = ጸ . = ። | shift + . = ፀ h = ሀ | Shift + h = ሐ s = ሰ |
     Shift + s = ሠ t = ተ | Shift + t = ጠ c = ቸ | Shift + c = ጨ v = ቨ | Shift + v = ኀ n = ነ |
-    Shift + n = ኘ k = ከ | Shift + k = ኸ z = ዘ | Shift + z = ዠ p = ፐ | Shift + p = ጰ
-    l = ለ m = መ r = ረ X = ሸ q = ቀ b = በ w = ወ y = የ d = ደ j = ጀ g = ገ, f = ፈ
+    Shift + n = ኘ k = ከ | Shift + k = ኸ z = ዘ | Shift + z = ዠ p = ፐ | Shift + p = ጰ| Shift + x = ዐ
+    l = ለ, m = መ, r = ረ, x = አ, q = ቀ, b = በ, w = ወ, y = የ, d = ደ, j = ጀ, g = ገ, f = ፈ
  </div>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
