--- a/index.html
+++ b/index.html
@@ -163,6 +163,15 @@
             border-radius: 3px;
         }
 
+        footer {
+            margin-top: 25px;
+            padding: 10px;
+            text-align: center;
+            font-size: 0.9em;
+            color: #555;
+            width: 100%;
+        }
+
         @media (max-width: 768px) {
             body { padding: 10px; }
             h1 { font-size: 1.5em; }
@@ -460,5 +469,10 @@
         init();
     });
     </script>
+    
+    <footer>
+        Developed by: Ahmedhaji Sadik | +251945033132
+    </footer>
+
 </body>
 </html>
