--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             }
             #keyboard-app, textarea#output {
                 flex-basis: auto; /* Reset flex-basis */
-                width: 100%;     /* Full width for stacked items */
+                width: 100%;      /* Full width for stacked items */
                 max-width: 100%; /* Override any previous max-width */
                 align-self: auto; /* Reset self-alignment */
             }
@@ -382,7 +382,13 @@
             'H': 'ሐ', 'S': 'ሠ', 'T': 'ጠ', 'C': 'ጨ', 'N': 'ኘ', 'K': 'ኸ', 'Z': 'ዠ',
             'V': 'ኀ', 'P': 'ጰ', 'X': 'ዐ',
             '`': 'ሸ', ',': '፣', '.': '።', ';': '፤', ':': '፡', '?': '?',
-            '<': 'ጸ', '>': 'ፀ'
+            '<': 'ጸ', '>': 'ፀ',
+
+            // Added default symbols
+            '1': '1', '2': '2', '3': '3', '4': '4', '5': '5', '6': '6', '7': '7', '8': '8', '9': '9', '0': '0',
+            '-': '-', '=': '=',
+            '!': '!', '@': '@', '#': '#', '$': '$', '%': '%', '^': '^', '&': '&', '*': '*', '(': '(', ')': ')',
+            '_': '_', '+': '+'
         };
 
         const vowelMapping = { 'e': 0, 'u': 1, 'i': 2, 'a': 3, 'y': 4, 'o': 6 };
