--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="icon" href="/favicon.ico" sizes="any">
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png"> <link rel="manifest" href="/site.webmanifest"> 
-      <meta name="google-site-verification" content="google53c8f37f05e3fc20.html" />
+     <meta name="google-site-verification" content="FzjlEWszFVraCefC57xc4mhuUwV5EK_tIIHNWTmzmis" />
 
     <script type="application/ld+json">
     {
