--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
     </main> <section class="keyboard-info" aria-labelledby="keyboard-instructions-heading">
         <h2 id="keyboard-instructions-heading">How to Use your physical keyboard</h2>
-        <p><strong> ኪይቦርዱ በትክክል እንዲሰራ ፈጠን ብሎ መፃፍ ያስፈልጋል! አንድ ኮንሶናንት ኪይ ከተጫናችሁ በሗላ ወዲያው ቫውሉን መጫን አለባችሁ መዘግየት አያስፈልግም!</strong><br>
+        <p><strong>ኪቦርዱን የሰራሁት በዋናነት ለኮምፒዩተር እና ላፕቶፕ ተጠቃሚዎች ነው!፡ ኪቦርዱ በትክክል እንዲሰራ ፈጠን ብሎ መፃፍ ያስፈልጋል! አንድ ኮንሶናንት ኪይ ከተጫናችሁ በሗላ ወዲያው ቫውሉን መጫን አለባችሁ መዘግየት አያስፈልግም!</strong><br>
         Type a consonant (like <code>b</code>) followed by a vowel (<code>e, u, i, a, y, o</code>) to get different forms: <code>be</code> &rarr; በ, <code>bu</code> &rarr; ቡ, <code>bi</code> &rarr; ቢ, <code>ba</code> &rarr; ባ, <code>by</code> &rarr; ቤ, <code>bo</code> &rarr; ቦ.<br>
         Press a consonant key once to get the 6th form (e.g., <code>b</code> &rarr; ብ). For labialized forms, type 'wa' after the consonant (e.g., <code>bwa</code> &rarr; ቧ).
         </p>
