--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
         </p>
         <p><strong>Special Characters:</strong><br>
         <code>h</code> &rarr; ሀ,   <code>H</code> (Shift+h) &rarr; ሐ |  <code>s</code> &rarr; ሰ, <code>S</code> (Shift+s) &rarr; ሠ | <code>t</code> &rarr; ተ, <code>T</code> (Shift+t) &rarr; ጠ | <code>c</code> &rarr; ቸ, <code>C</code> (Shift+c) &rarr; ጨ | <code>n</code> &rarr; ነ, <code>N</code> (Shift+n) &rarr; ኘ | <code>z</code> &rarr; ዘ, <code>Z</code> (Shift+z) &rarr; ዠ | <code>.</code> &rarr; ። | <code>,</code> &rarr; ፣ | Shift+. &rarr; ፀ | Shift+, &rarr; ጸ
-    |  <code>L</code> (Shift+l) &rarr; ሸ, OR <code>`</code> &rarr; ሸ 
+    |  <code>L</code> (Shift+l) &rarr; ሸ, OR <code>`</code> &rarr; ሸ, <code>~</code> &rarr; ኧ
         </p>
     </section>
 
