--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
             Object.keys(fidelGroups).slice(10, 20),
             Object.keys(fidelGroups).slice(20, 30),
             Object.keys(fidelGroups).slice(30),
-            ['@', '#', '፦', '።', ' ፧', '፨', '፠', 'ኧ'], // Reduced punctuation row for space
+            ['@', '#', '፦', '፥', ' ፧', '፨', '፠', 'ኧ'], // Reduced punctuation row for space
             ['Backspace', 'Space', 'Enter']
         ];
 
