--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
         </p>
         <p><strong>Special Characters:</strong><br>
         <code>h</code> &rarr; ሀ,   <code>H</code> (Shift+h) &rarr; ሐ |  <code>s</code> &rarr; ሰ, <code>S</code> (Shift+s) &rarr; ሠ | <code>t</code> &rarr; ተ, <code>T</code> (Shift+t) &rarr; ጠ | <code>c</code> &rarr; ቸ, <code>C</code> (Shift+c) &rarr; ጨ | <code>n</code> &rarr; ነ, <code>N</code> (Shift+n) &rarr; ኘ | <code>z</code> &rarr; ዘ, <code>Z</code> (Shift+z) &rarr; ዠ | <code>.</code> &rarr; ። | <code>,</code> &rarr; ፣ | Shift+. &rarr; ፀ | Shift+, &rarr; ጸ
-    |  <code>L</code> (Shift+l) &rarr; ሸ, OR <code>`</code> &rarr; ሸ, <code>~</code> &rarr; ኧ
+    |  <code>L</code> (Shift+l) &rarr; ሸ, <code>`</code> &rarr; ኀ, <code>~</code> &rarr; ኧ
         </p>
     </section>
 
@@ -381,7 +381,7 @@
             'y': 'የ', 'd': 'ደ', 'j': 'ጀ', 'g': 'ገ', 'f': 'ፈ', 'p': 'ፐ', 'v': 'ቨ',
             'H': 'ሐ', 'S': 'ሠ', 'T': 'ጠ', 'C': 'ጨ', 'N': 'ኘ', 'K': 'ኸ', 'Z': 'ዠ',
             'V': 'ኀ', 'P': 'ጰ', 'X': 'ዐ',
-            '`': 'ሸ',  '~': 'ኧ', ',': '፣', '.': '።', ';': '፤', ':': '፡', '?': '?',
+            '`': 'ኀ',  '~': 'ኧ', ',': '፣', '.': '።', ';': '፤', ':': '፡', '?': '?',
             '<': 'ፀ', '>': 'ጸ',  'L': 'ሸ',
 
             // Added requested symbols
@@ -406,7 +406,7 @@
             Object.keys(fidelGroups).slice(10, 20),
             Object.keys(fidelGroups).slice(20, 30),
             Object.keys(fidelGroups).slice(30),
-            ['@', '#', '፦', '፥', ' ፧', '፨', '፠', 'ኧ'], // Reduced punctuation row for space
+            ['@', '#', '፦', '፥', ' ፧', '፨', 'ኀ', 'ኧ'], // Reduced punctuation row for space
             ['Backspace', 'Space', 'Enter']
         ];
 
