--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
     <meta property="twitter:url" content="https://amkb.vercel.app/">
     <meta property="twitter:title" content="Online Amharic Keyboard (የአማርኛ ኪቦርድ) - Type Amharic Easily">
     <meta property="twitter:description" content="Free online Amharic Fidel keyboard for easy typing in your browser. Supports physical keyboard and virtual key clicks.">
+    <meta property="twitter:image" content="https://amkb.vercel.app/twitter-image.png"> <link rel="canonical" href="https://amkb.vercel.app/">
+
     <link rel="icon" href="/favicon.ico" sizes="any">
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png"> <link rel="manifest" href="/site.webmanifest"> 
-     <meta name="google-site-verification" content="FzjlEWszFVraCefC57xc4mhuUwV5EK_tIIHNWTmzmis" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png"> <link rel="manifest" href="/site.webmanifest"> <meta name="google-site-verification" content="YOykyV7jEUg5Nj2GeyhHUcewf9WW-Ruyke1v23KePrY" />
 
     <script type="application/ld+json">
     {
@@ -333,14 +334,13 @@
         <textarea id="output" rows="8" placeholder="Type Amharic here... (እዚህ አማርኛ ይጻፉ...)" aria-label="Amharic text input area" lang="am"></textarea>
 
     </main> <section class="keyboard-info" aria-labelledby="keyboard-instructions-heading">
-        <h2 id="keyboard-instructions-heading">How to Use your physical keyboard</h2>
-        <p><strong> ኪይቦርዱ በትክክል እንዲሰራ ፈጠን ብሎ መፃፍ ያስፈልጋል! አንድ ኮንሶናንት ኪይ ከተጫናችሁ በሗላ ወዲያው ቫውሉን መጫን አለባችሁ መዘግየት አያስፈልግም!</strong><br>
+        <h2 id="keyboard-instructions-heading">How to Use</h2>
+        <p><strong>Using your physical keyboard:</strong><br>
         Type a consonant (like <code>b</code>) followed by a vowel (<code>e, u, i, a, y, o</code>) to get different forms: <code>be</code> &rarr; በ, <code>bu</code> &rarr; ቡ, <code>bi</code> &rarr; ቢ, <code>ba</code> &rarr; ባ, <code>by</code> &rarr; ቤ, <code>bo</code> &rarr; ቦ.<br>
         Press a consonant key once to get the 6th form (e.g., <code>b</code> &rarr; ብ). For labialized forms, type 'wa' after the consonant (e.g., <code>bwa</code> &rarr; ቧ).
         </p>
         <p><strong>Special Characters:</strong><br>
-        <code>h</code> &rarr; ሀ,   <code>H</code> (Shift+h) &rarr; ሐ |  <code>s</code> &rarr; ሰ, <code>S</code> (Shift+s) &rarr; ሠ | <code>t</code> &rarr; ተ, <code>T</code> (Shift+t) &rarr; ጠ | <code>c</code> &rarr; ቸ, <code>C</code> (Shift+c) &rarr; ጨ | <code>n</code> &rarr; ነ, <code>N</code> (Shift+n) &rarr; ኘ | <code>z</code> &rarr; ዘ, <code>Z</code> (Shift+z) &rarr; ዠ | <code>.</code> &rarr; ። | <code>,</code> &rarr; ፣ | Shift+. &rarr; ፀ | Shift+, &rarr; ጸ
-    |  <code>L</code> (Shift+l) &rarr; ሸ, OR <code>`</code> &rarr; ሸ 
+        <code>h</code> &rarr; ሀ, <code>H</code> (Shift+h) &rarr; ሐ | <code>s</code> &rarr; ሰ, <code>S</code> (Shift+s) &rarr; ሠ | <code>t</code> &rarr; ተ, <code>T</code> (Shift+t) &rarr; ጠ | <code>c</code> &rarr; ቸ, <code>C</code> (Shift+c) &rarr; ጨ | <code>n</code> &rarr; ነ, <code>N</code> (Shift+n) &rarr; ኘ | <code>z</code> &rarr; ዘ, <code>Z</code> (Shift+z) &rarr; ዠ | <code>`</code> &rarr; ሸ | <code>.</code> &rarr; ። | <code>,</code> &rarr; ፣ | Shift+. &rarr; ፀ | Shift+, &rarr; ጸ
         </p>
     </section>
 
@@ -382,11 +382,7 @@
             'H': 'ሐ', 'S': 'ሠ', 'T': 'ጠ', 'C': 'ጨ', 'N': 'ኘ', 'K': 'ኸ', 'Z': 'ዠ',
             'V': 'ኀ', 'P': 'ጰ', 'X': 'ዐ',
             '`': 'ሸ', ',': '፣', '.': '።', ';': '፤', ':': '፡', '?': '?',
-            '<': 'ፀ', '>': 'ጸ',  'L': 'ሸ',
-
-            // Added requested symbols
-            '/': '/',  // Forward slash
-            '"': '"',  // Double quote
+            '<': 'ጸ', '>': 'ፀ',
 
             // Added default symbols
             '1': '1', '2': '2', '3': '3', '4': '4', '5': '5', '6': '6', '7': '7', '8': '8', '9': '9', '0': '0',
@@ -495,8 +491,8 @@
             // Exception for Tab, Ctrl+C, Ctrl+V etc.
             if (event.ctrlKey || event.altKey || event.metaKey) {
                  if (event.key.toLowerCase() !== 'v' && event.key.toLowerCase() !== 'c' && event.key.toLowerCase() !== 'a' && event.key.toLowerCase() !== 'x' && event.key.toLowerCase() !== 'z' && event.key.toLowerCase() !== 'y' ) { // allow common shortcuts
-                     clearSequence();
-                }
+                    clearSequence();
+                 }
                 return; // Allow browser shortcuts
             }
             if (event.key === 'Tab') {
